Suppression des scripts en trop

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,4 +27,4 @@ repos:
     rev: v3.1.0
     hooks:
       - id: pylint
-        args: [--disable=import-error, --disable=duplicate-code]
+        args: [--disable=import-error]
