--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,17 @@
 [tool.poetry]
-name = "lpo-aura"
+name = "weatherlink2pg"
 version = "0.1.0"
-description = ""
-authors = ["Johan Rocheteau <johan.rocheteau@hotmail.fr>"]
+description = "Simple python app to store weatherlink data into PostgreSQL through API"
+authors = [
+    "Johan Rocheteau <johan.rocheteau@hotmail.fr>",
+    "Frédéric CLOITRE <no-reply@lpo.fr>",
+]
 readme = "README.md"
+packages = [{include = "weatherlink2pg", from = "src"}]
+
+
+[tool.poetry.scripts]
+weatherlink2pg = "weatherlink2pg.main:cli"
 
 [tool.poetry.dependencies]
 python = "^3.11"
