--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,6 @@ pre-commit = "^3.7.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
