--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,11 @@ version = "0.1.0"
 description = ""
 authors = ["Johan Rocheteau <johan.rocheteau@hotmail.fr>"]
 readme = "README.md"
+packages = [{include = "weatherlink2pg", from = "src"}]
+
+
+[tool.poetry.scripts]
+weatherlink2pg = "weatherlink2pg.main:cli"
 
 [tool.poetry.dependencies]
 python = "^3.11"
