--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,27 @@ authors = [
     "Frédéric CLOITRE <no-reply@lpo.fr>",
 ]
 readme = "README.md"
+maintainers = [
+    "Johan Rocheteau <johan.rocheteau@hotmail.fr>",
+    "Frédéric CLOITRE <no-reply@lpo.fr>",
+]
+license = "AGPL-3.0-or-later"
+homepage = "https://github.com/lpoaura/weatherlink2pg/"
+keywords = ["WeatherLink",]
+classifiers = [
+    "Development Status :: 1 - Planning",
+    "Environment :: Console",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: GNU Affero General Public License v3",
+    "Natural Language :: French",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: Implementation :: PyPy",
+    "Topic :: Documentation",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: System :: Installation/Setup",
+    "Topic :: System :: Software Distribution",
+]
 packages = [{include = "weatherlink2pg", from = "src"}]
 
 
@@ -32,6 +53,14 @@ flake8 = "^7.0.0"
 flake8-isort = "^6.1.1"
 pylint = "^3.1.0"
 pre-commit = "^3.7.0"
+
+
+
+[tool.poetry.group.docs.dependencies]
+sphinx = "^7.3.7"
+sphinxcontrib-napoleon = "^0.7"
+myst-parser = "^3.0.1"
+sphinx-book-theme = "^1.1.2"
 
 [build-system]
 requires = ["poetry-core"]
